<resources>
    <string name="app_name">DNS Hero</string>
    <string name="heroWebsite" translatable="false">hero.com</string>
    <string name="domain">Domain</string>
    <string name="searchFailed">Search failed!</string>
    <string name="appName_domain">%s - DNSHero</string>
    <string name="dnsRecords">DNS records</string>
    <string name="authoritative">Authoritative</string>
    <string name="resolver">Resolver</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="failedLoading">Failed loading!</string>
    <string name="rootNameServer">Root nameserver</string>
    <string name="nameservers">Nameservers</string>
    <string name="glue">Glue</string>
    <string name="name"><![CDATA[<b>Name:</b>]]> %s</string>
    <string name="address"><![CDATA[<b>Address:</b> %s]]></string>
    <string name="v4">v4</string>
    <string name="v6">v6</string>
    <string name="rtt"><![CDATA[<b>RTT:</b>]]> %s</string>
    <string name="noGlueRecords">No glue records provided for this nameserver</string>
    <string name="mx">MX</string>
    <string name="ttl"><![CDATA[<b>TTL:</b> %ds]]></string>
    <string name="sources">Sources</string>
    <string name="publicResolver">Public resolver</string>
    <string name="authoritativeServer">Authoritative server</string>
    <string name="a">A</string>
    <string name="aaaa">AAAA</string>
    <string name="cname">CNAME</string>
    <string name="txt">TXT</string>
    <string name="soa">SOA</string>
    <string name="serial"><![CDATA[<b>Serial:</b>]]> %d</string>
    <string name="refresh"><![CDATA[<b>Refresh:</b>]]> %ds</string>
    <string name="soaRetry"><![CDATA[<b>Retry:</b>]]> %ds</string>
    <string name="expire"><![CDATA[<b>Expire:</b>]]> %ds</string>
    <string name="minimumTtl"><![CDATA[<b>Minimum TTL:</b>]]> %ds</string>
    <string name="primaryDns"><![CDATA[<b>Primary DNS:</b>]]> %s</string>
    <string name="emailLabel"><![CDATA[<b>Email:</b>]]> %s</string>
    <string name="glueV4">Glue V4</string>
    <string name="glueV6">Glue V6</string>
    <string name="aRecord"><![CDATA[<b>A record:</b>]]> %s</string>
    <string name="aaaaRecord"><![CDATA[<b>AAAA record:</b>]]> %s</string>
    <string name="aaaaSource">AAAA source</string>
    <string name="aSource">A source</string>
    <string name="absentLowercase"><![CDATA[<i>absent</i>]]></string>
    <string name="aTtl"><![CDATA[<b>A TTL:</b> %ds]]></string>
    <string name="aaaaTtl"><![CDATA[<b>AAAA TTL:</b> %ds]]></string>
    <string name="noRecords">No records found</string>
    <string name="help">Help</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="info">Info</string>
    <string name="skipped">Skipped</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="clearFavorites">Clear favorites</string>
    <string name="clearFavorites_summary">Remove all favorite domains.</string>
    <string name="removeFavorite">Remove favorite(s)</string>
    <string name="removeFavorite_summary">Remove some favorite domains.</string>
    <string name="remove">Remove</string>
    <string name="general">General</string>
    <string name="typeDomainHere">Type a domain here:</string>
    <string name="orPickFromFavorites">Or pick one from your favorites:</string>
</resources>