<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <Button
        android:id="@+id/loading_preferences"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="end|top"
        android:text="@string/preferences"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="144dp"
            android:layout_height="101dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo" />

        <ProgressBar
            android:id="@+id/loading_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/loading_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:text="@string/typeDomainHere"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loading_domain"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:hint="@string/domain"
                app:endIconDrawable="@drawable/baseline_search_24"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loading_favoritesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/orPickFromFavorites"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="@color/white" />

            <com.gianlu.commonutils.misc.MaximumHeightRecyclerView
                android:id="@+id/loading_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="48dp"
                android:scrollbars="vertical"
                app:maxHeight="180dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" />
</LinearLayout>
